--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -118,10 +118,10 @@
                             <a data-bind="attr: { href: Url }">Wikipedia URL</a>
                         </h5>
                         <div class="button wrapper">
-                            <button id="showDStand" class="btn default btn-primary btn-sm"> Driver Standings</button>
-                            <button id="showCStand" class="btn default btn-primary btn-sm"> Constructor Standings</button>
-                            <button id="showRaces" class="btn default btn-primary btn-sm">Races</button>
-                            <button id="Hide" class="btn default btn-primary btn-sm d-none" style="margin-top:20px;">Hide Standings</button>
+                            <button id="showDStand" class="btn default btn-primary btn-sm" style="margin-bottom:20px;"> Driver Standings</button>
+                            <button id="showCStand" class="btn default btn-primary btn-sm" style="margin-bottom:20px;"> Constructor Standings</button>
+                            <button id="showRaces" class="btn default btn-primary btn-sm"style="margin-bottom:20px;">Races</button>
+                            <button id="Hide" class="btn default btn-primary btn-sm d-none" style="margin-bottom:20px;">Hide Standings</button>
                         </div>
                     </div>
                 </div>
