--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -112,7 +112,7 @@
             </div>
             <div class="card-footer">
                 <h2><span style='color:white'>Lights out and away we go!</span></h2>
-                <a class="btn btn-outline-primary" href="index.html" style="text-decoration:none;">Go Back to Homepage</a>
+                <a class="btn btn-outline-primary btn-primary text-light" href="index.html" style="text-decoration:none;">Go Back to Homepage</a>
             </div>
         </div>
     </div>
