--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -56,7 +56,8 @@
                 <small class="form-label" for="url">Url</small>
                 <a style="padding-right:5px;display:inline-block;border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;text-decoration:none" data-bind="attr: { href: Url() }">Wikipedia Link</a>
             </div>
-            <div id="map" style="width: 60%; height: 175px;"></div>
+            <div id="map" style="width: 60%; height: 175px;">
+            </div>
         </div>
         <div style="width:100%">
             <h4>Races <i class="fa fa-flag-checkered"></i>  (years)</h4>
@@ -90,12 +91,11 @@
             </div>
         </div>
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCySu0b4e2ucTo6C6AZYEi-N9sB0sED340" async defer></script>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
     <script src="circuitDetails.js"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCySu0b4e2ucTo6C6AZYEi-N9sB0sED340&callback=initMap">
-</script>
+    
 </body>
 </html>
