--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -56,7 +56,7 @@
                 <small class="form-label" for="url">Url</small>
                 <a style="padding-right:5px;display:inline-block;border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;text-decoration:none" data-bind="attr: { href: Url() }">Wikipedia Link</a>
             </div>
-            <div id="map" style="width: 60%; height: 175px;">
+            <div id="map" style="width: 100%; height: 175px;">
             </div>
         </div>
         <div style="width:100%">
@@ -66,7 +66,7 @@
             <a data-bind="text: Year, attr: { href:'./raceDetails.html?id=' + RaceId }" title="selecione para ver detalhes" class="btn btn-outline-dark" style="margin: 5px;"></a>
         </div>
     </div>
-    <div class="filler" style="width:100%;height:400px"></div>
+    <div class="filler" style="width:100%;height:00px"></div>
     <nav class="navbar navbar-dark bg-dark fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
@@ -91,7 +91,10 @@
             </div>
         </div>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCySu0b4e2ucTo6C6AZYEi-N9sB0sED340" async defer></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjggFG8k_fUGXIzD8eU4JTNQB9iImQR7k&callback=initMap&v=weekly"
+      async
+    ></script>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
