--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -91,10 +91,7 @@
             </div>
         </div>
     </div>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjggFG8k_fUGXIzD8eU4JTNQB9iImQR7k&callback=initMap&v=weekly"
-      async
-    ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjggFG8k_fUGXIzD8eU4JTNQB9iImQR7k" async defer></script>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
