--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- /ko -->
-        <div class="form-group input-group rounded" style="position:absolute;right:100px;top:175px;margin-bottom:35px;;width: 30%; float: right; padding: 5px;">
+        <div class="form-group input-group rounded" style="position:absolute;right:100px;top:175px;margin-bottom:35px;width: 30%; float: right; padding: 5px;">
             <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
             <button class="btn btn-outline-dark" id="button_delete" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-times-circle"></i></button>
         </div>
