--- a/Projeto/raceDetails.html
+++ b/Projeto/raceDetails.html
@@ -75,47 +75,24 @@
         </table>
         <!-- /ko-->
         <br />
-        <div class="accordion accordion-flush" id="accordion" style="width: 50%; float:left;">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Results
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordion">
-                    <div class="accordion-body">
-                        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; float: left;">
-                            <thead class="bg-dark text-light">
-                                <tr>
-                                    <th scope="col">DriverId</th>
-                                    <th scope="col">Driver</th>
-                                    <th scope="col">Constructor</th>
-                                    <th scope="col">Grid</th>
-                                    <th scope="col">Position</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col" class="text-right"></th>
-                                </tr>
-                            </thead>
-                            <tbody data-bind="foreach: Results">
-                                <tr>
-                                    <td class="align-middle" data-bind="text:DriverId"></td>
-                                    <td class="align-middle" data-bind="text:DriverName"></td>
-                                    <td class="align-middle" data-bind="text:ConstructorName"></td>
-                                    <td class="align-middle" data-bind="text:Grid"></td>
-                                    <td class="align-middle" data-bind="text:Position"></td>
-                                    <td class="align-middle" data-bind="text:Status"></td>
-                                    <td class="text-end">
-                                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./driverdetailsv2.html?id=' + DriverId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+        <div class="col-md-6 col-lg-3 col-sm-12" data-bind="foreach: Results" style="width:100%;">
+            <div class="zoom" style="width:30%; float:left; margin:20px;">
+                <!-- ko if: ImageUrl-->
+                <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="width: 100%; height: 150px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Driver Image">
+                <!-- /ko -->
+                <!-- ko ifnot: ImageUrl-->
+                <img class="img fluid" src="Images/formula1logo.png" style="width: 100%; height: 150px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Driver Image">
+                <!-- /ko -->
+                <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
+                    <h3 class="card-title">Position: <span data-bind="text: Position"></span></h3>
+                    <h5 class="card-title"><span data-bind="text: DriverName"></span></h5>
+                    <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./constructordetailsv2.html?id=' + ConstructoId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                    <p class="card-text">Contructor: <span data-bind="text: ConstructorName"></span></p>
+                </div>
+                <div class="footer">
+                    <a data-bind="attr: { href:'./driverDetails.html?id=' + DriverId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Driver Details</a>
                 </div>
             </div>
-
-
-
         </div>
     </div>
     <div class="filler" style="width:100%;height:700px"></div>
