--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -79,6 +79,7 @@
                 <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
                     <h5 class="card-title"><span data-bind="text: Name"></span></h5>
                     <p class="card-title">CircuitId: <span data-bind="text: CircuitId"></span></p>
+                    <p class="card-title">Location: <span data-bind="text: Country"></span></p>
                 </div>
                 <div class="footer">
                     <a data-bind="attr: { href:'./circuitDetails.html?id=' + CircuitId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Circuit Details</a>
