--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -50,20 +50,20 @@
                 <div class="row">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                    <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './circuits.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                    <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './circuits.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                    <li class="page-item float-end"><a class="page-link" style="color: black" title="First Page" data-bind="attr: { href: './circuits.html?page=' + '1',  rel:'prev'}"><<</a></li>
+                    <li class="page-item float-end"><a class="page-link" style="color: black" title="Previous Page" data-bind="attr: { href: './circuits.html?page=' + previousPage(),  rel:'prev'}"><</a></li>
                     <!-- /ko -->
                     <!-- ko foreach: pageArray()-->
                     <!-- ko if:$data == $parent.currentPage() -->
-                    <li class="active page-item"><a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
+                    <li class="active page-item"><a class="page-link" style="color: black; background-color: lightgrey;" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
                     <!-- /ko -->
                     <!-- ko if:$data != $parent.currentPage() -->
-                    <li class="page-item"><a class="page-link" data-bind="attr: { href: './circuits.html?page=' + $data, title:'Goto Page ' + $data }, text:$data"></a></li>
+                    <li class="page-item"><a class="page-link" style="color: black" data-bind="attr: { href: './circuits.html?page=' + $data, title:'Goto Page ' + $data }, text:$data"></a></li>
                     <!-- /ko -->
                     <!-- /ko -->
                     <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                    <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './circuits.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './circuits.html?page=' + totalPages() }">⇥</a></li>
+                    <li class="page-item"><a class="page-link" style="color: black" title="Next Page" data-bind="attr: { href: './circuits.html?page=' + nextPage(), rel:'next' }">></a></li>
+                    <li class="page-item"><a class="page-link" style="color: black" title="Last Page" data-bind="attr: { href: './circuits.html?page=' + totalPages() }">>></a></li>
                     <!-- /ko -->
                 </ul>
             </div>
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="filler" style="width:100%;height:400px;"></div>
+        <div class="filler" style="width:100%;height:700px;"></div>
     </div>
     <div class="filler" style="width:100%;height:400px; margin: 500px;"></div>
     <nav class="navbar navbar-dark bg-dark fixed-bottom">
