--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -69,22 +69,21 @@
             </div>
         </div>
         <!-- /ko -->
-        <div class="form-group input-group rounded" style="position:absolute;right:100px;top:175px;margin-bottom:35px;;width: 30%; float: right; padding: 5px;">
+        <div class="form-group input-group rounded" style="position:absolute;right:100px;top:175px;margin-bottom:35px;width: 30%; float: right; padding: 5px;">
             <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
             <button class="btn btn-outline-dark" id="button_delete" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-times-circle"></i></button>
         </div>
         <div class="col-md-3 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
-            <div class="zoom" style="width:30%; float:left; margin:20px;">
-                <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="width: 100%; height: 250px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Circuit Image">
-                <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
-                    <h5 class="card-title"><span data-bind="text: Name"></span></h5>
-                    <p class="card-title">CircuitId: <span data-bind="text: CircuitId"></span></p>
-                    <p class="card-title">Location: <span data-bind="text: Country"></span></p>
+            <a data-bind="attr: { href:'./circuitDetails.html?id=' + CircuitId }" style="text-decoration: none; color: black">
+                <div class="zoom" style="width:30%; float:left; margin:20px;">
+                    <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="width: 100%; height: 250px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Circuit Image">
+                    <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
+                        <h5 class="card-title"><span data-bind="text: Name"></span></h5>
+                        <p class="card-title">CircuitId: <span data-bind="text: CircuitId"></span></p>
+                        <p class="card-title">Location: <span data-bind="text: Country"></span></p>
+                    </div>
                 </div>
-                <div class="footer">
-                    <a data-bind="attr: { href:'./circuitDetails.html?id=' + CircuitId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Circuit Details</a>
-                </div>
-            </div>
+            </a>
         </div>
         <div class="filler" style="width:100%;height:700px;"></div>
     </div>
