--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -83,6 +83,26 @@
                         </div>
                     </div>
                 </div>
+                <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;">
+                    Circuits</h3>
+                    <div class="row" data-bind="foreach: recordsv3">
+                        <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;">
+                            <div class="card card1" style="width: 300px; height: 350px; border-radius:20px;border:2px solid black;">
+                                <!-- ko if: ImageUrl-->
+                                <img class="card-img-top" data-bind="attr: { src: ImageUrl }" style="height: 150px; border-top-left-radius: 20px; border-top-right-radius: 20px;border-bottom:2px solid black; ">
+                                <!-- /ko -->
+                                <!-- ko ifnot: ImageUrl-->
+                                <img class="img fluid" src="Images/formula1logo.png" style="height: 200px; border-top-left-radius: 20px; border-top-right-radius: 20px;border-bottom:2px solid black; ">
+                                <!-- /ko -->
+                                <div class="card-body">
+                                    <h4 class="card-title" data-bind="text: Name"></h4>
+                                    <p class="card-text">Name:  <span class="card-text" data-bind="text: Name"></span></p>
+                                    <p class="card-text">Circuit Id: <span class="card-text" data-bind="text: CircuitId"></span></p>
+                                    <a class="btn btn-dark btn-sm" style="float:right" data-bind="attr: { href: './circuitDetails.html?id=' + CircuitId }">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
     </div>
 
 
