--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -40,7 +40,7 @@
     <!-- Working Area -->
     <div class="container">
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
-            <h2>Favourites<h6>Check out your favorite drivers and constructors!</h6></h2>
+            <h2>Favourites<h6>Check out your favorite drivers, constructors and circuits!</h6></h2>
 
         </div>
         <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;">
