--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -56,7 +56,7 @@
                 <small class="form-label" for="url">Url</small>
                 <a style="padding-right:5px;display:inline-block;border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;text-decoration:none" data-bind="attr: { href: Url() }">Wikipedia Link</a>
             </div>
-            <div id="map" style="width: 100%; height: 175px;">
+            <div id="map" style="margin-left:20px;width: 80%; height: 250px;">
             </div>
         </div>
         <div style="width:100%">
