--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -38,7 +38,7 @@
     <div class="filler" style="width:100%;height:100px"></div>
     <div class="container">
         <h1 data-bind="text: Name"></h1>
-        <img data-bind="attr:{src: ImageUrl}" style="height:350px; width: 45%; border: 5px red solid;border-radius: 10px; float:left;" alt="Circuit Image">
+        <img data-bind="attr:{src: ImageUrl}" style="height:450px; width: 45%; border: 5px red solid;border-radius: 10px; float:left;" alt="Circuit Image">
         <div style="width: 45%;" class="row">
             <div id="circuitid" style='width: 100%;'>
                 <small class="form-label" for="circuitid">CircuitId</small>
@@ -59,14 +59,14 @@
             <div id="map" style="margin-left:20px;width: 80%; height: 250px;">
             </div>
         </div>
-        <div style="width:100%">
+        <div style="width:100%; margin-top: 30px;">
             <h4>Races <i class="fa fa-flag-checkered"></i>  (years)</h4>
         </div>
         <div data-bind="foreach: Races" style="width: 100%">
             <a data-bind="text: Year, attr: { href:'./raceDetails.html?id=' + RaceId }" title="selecione para ver detalhes" class="btn btn-outline-dark" style="margin: 5px;"></a>
         </div>
     </div>
-    <div class="filler" style="width:100%;height:00px"></div>
+    <div class="filler" style="width:100%;height:200px"></div>
     <nav class="navbar navbar-dark bg-dark fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
