--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-    <div class="filler" style="width:100%;height:400px"></div>
+    <div class="filler" style="width:100%;height:500px;margin-top:100px;"></div>
     <nav class="navbar navbar-dark bg-dark fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
