--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -43,7 +43,7 @@
             <h2>Favourites<h6>Check out your favorite drivers, constructors and circuits!</h6></h2>
 
         </div>
-        <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;">
+        <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;" id="drivers">
             Drivers</h3>
             <div class="row" data-bind="foreach: records">
                 <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;">
+            <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;" id ="constructors">
                 Constructors</h3>
                 <div class="row" data-bind="foreach: recordsv2">
                     <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;">
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;">
+                <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;" id="circuits">
                     Circuits</h3>
                     <div class="row" data-bind="foreach: recordsv3">
                         <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;">
