--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -45,7 +45,12 @@
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
                                 <tr class="row" data-bind="visible: ImageUrl() != '' && ImageUrl() != null">
-                                    <td class="col-md-10"><img style="width:200px;height:165px;" class="img-thumbnail col-2" data-bind="attr:{src: ImageUrl}" alt="Image not Available "></td>
+                                    <!-- ko if: ImageUrl() -->
+                                    <td class="col-md-10"><img style="width:150px;height:auto" class="img-thumbnail col-2" data-bind="attr:{src: ImageUrl}" alt="Image not Available "></td>
+                                    <!-- /ko -->
+                                    <!-- ko ifnot: ImageUrl() -->
+                                    <td class="col-md-10"><img style="width:150px;height:100px;" class="img-thumbnail col-2" src = "Images/formula1logo.png" alt="Image not Available "></td>
+                                    <!-- /ko -->
                                 </tr>
                                 <div class="mt-3">
                                     <h4 style="font-weight:bold" data-bind="text: Name"></h4>
