--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -49,7 +49,7 @@
                 <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;">
                     <div class="card card1" style="width: 300px; height: 350px; border-radius:20px;border:2px solid black;">
                         <!-- ko if: ImageUrl-->
-                        <img class="card-img-top" data-bind="attr: { src: ImageUrl }" style="max-height: 168px; border-top-left-radius: 20px; border-top-right-radius: 20px;border-bottom:2px solid black; ">
+                        <img class="card-img-top" data-bind="attr: { src: ImageUrl }" style="max-height: 168px;width:300px; border-top-left-radius: 20px; border-top-right-radius: 20px;border-bottom:2px solid black; ">
                         <!-- /ko -->
                         <!-- ko ifnot: ImageUrl-->
                         <img class="img fluid" src="Images/formula1logo.png" style="height: 200px; border-top-left-radius: 20px; border-top-right-radius: 20px;border-bottom:2px solid black; ">
